--- a/server/package.json
+++ b/server/package.json
@@ -14,6 +14,7 @@
     "dotenv": "^8.2.0",
     "ejs": "^3.1.3",
     "express": "^4.17.1",
-    "mysql": "^2.18.1"
+    "mysql": "^2.18.1",
+    "serve-favicon": "^2.5.0"
   }
 }
