--- a/server/package.json
+++ b/server/package.json
@@ -1,11 +1,12 @@
 {
-  "name": "wifinina_practice",
-  "version": "1.0.0",
+  "name": "hango",
+  "version": "1.1.0",
   "description": "",
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "start": "node server.js",
+    "lint": "eslint . --fix"
   },
   "author": "",
   "license": "ISC",
