--- a/server/package.json
+++ b/server/package.json
@@ -1,36 +1,14 @@
 {
   "name": "hango",
   "version": "1.1.0",
-  "description": "",
   "main": "server.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js",
-    "lint": "eslint . --fix"
-  },
-  "author": "",
-  "license": "ISC",
+  "license": "MIT",
   "dependencies": {
     "body-parser": "^1.19.0",
-    "crypto": "^1.0.1",
     "dotenv": "^8.2.0",
-    "ejs": "^3.1.3",
-    "eslint": "^7.10.0",
-    "eslint-config-prettier": "^6.12.0",
-    "eslint-plugin-prettier": "^3.1.4",
+    "ejs": "^3.1.5",
     "express": "^4.17.1",
-    "husky": "^4.3.0",
-    "lint-staged": "^10.4.0",
     "mysql": "^2.18.1",
-    "prettier": "^2.1.2",
     "serve-favicon": "^2.5.0"
-  },
-  "husky": {
-    "hooks": {
-      "pre-commit": "lint-staged"
-    }
-  },
-  "lint-staged": {
-    "*.js": "npm run lint"
   }
 }
