--- a/server/package.json
+++ b/server/package.json
@@ -3,6 +3,12 @@
   "version": "1.1.0",
   "main": "server.js",
   "license": "MIT",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js",
+    "lint": "eslint src --fix",
+    "pretty": "prettier —write \"src/**/*.js\""
+  },
   "dependencies": {
     "body-parser": "^1.19.0",
     "dotenv": "^8.2.0",
@@ -10,5 +16,26 @@
     "express": "^4.17.1",
     "mysql": "^2.18.1",
     "serve-favicon": "^2.5.0"
+  },
+  "devDependencies": {
+    "babel-eslint": "^10.1.0",
+    "eslint": "^7.10.0",
+    "eslint-config-prettier": "^6.12.0",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-prettier": "^3.1.4",
+    "husky": "^4.3.0",
+    "lint-staged": "^10.4.0",
+    "prettier": "2.1.2"
+  },
+  "lint-staged": {
+    "*.js": [
+      "eslint src --fix",
+      "prettier --write"
+    ]
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
   }
 }
