[eslint] eslint 자동화 설정 변경 #134
Signed-off-by: 박우림 <woorimprog@gmail.com>

--- a/server/package.json
+++ b/server/package.json
@@ -27,15 +27,15 @@
     "lint-staged": "^10.4.0",
     "prettier": "2.1.2"
   },
-  "lint-staged": {
-    "*.js": [
-      "eslint src --fix",
-      "prettier --write"
-    ]
-  },
   "husky": {
     "hooks": {
-      "pre-commit": "lint-staged"
+        "pre-commit": "lint-staged && yarn lint"
     }
+  },
+  "lint-staged": {
+    "*.js": [
+      "yarn pretty",
+      "git add"
+    ]
   }
 }
