--- a/server/package.json
+++ b/server/package.json
@@ -1,13 +1,13 @@
 {
   "name": "hango",
-  "version": "1.1.0",
+  "version": "1.2.0",
   "main": "server.js",
-  "license": "MIT",
+  "license": "Apache 2.0",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js",
     "lint": "eslint src --fix",
-    "pretty": "prettier —write \"src/**/*.js\""
+    "pretty": "prettier \"src/**/*.js\""
   },
   "dependencies": {
     "body-parser": "^1.19.0",
