--- a/server/package.json
+++ b/server/package.json
@@ -1,11 +1,12 @@
 {
   "name": "hango",
-  "version": "1.2.0",
+  "version": "1.3.1",
   "main": "server.js",
   "license": "Apache 2.0",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js",
+    "dev": "./node_modules/.bin/nodemon src/app.js",
     "lint": "eslint src --fix",
     "pretty": "prettier \"src/**/*.js\""
   },
@@ -24,6 +25,7 @@
     "serve-favicon": "^2.5.0"
   },
   "devDependencies": {
+    "nodemon": "^1.11.0",
     "babel-eslint": "^10.1.0",
     "eslint": "^7.10.0",
     "eslint-config-prettier": "^6.12.0",
