--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,8 +1,8 @@
-version: '2.1'
+version: '3'
 
 volumes:
-  hango_sample_db_dev: {}
-  hango_sample_node_modules: {}
+  hango_sample_db_dev:
+  hango_sample_node_modules:
 
 services:
   db:
@@ -10,13 +10,12 @@ services:
     container_name: hango-mysql
     volumes:
       - hango_sample_db_dev:/var/lib/mysql/
+      - ./db:/docker-entrypoint-initdb.d/
     ports:
       - "3306"
     environment:
-      MYSQL_ROOT_PASSWORD: "password"
-      MYSQL_USER: "root"
-      MYSQL_PASSWORD: "password"
-      MYSQL_DATABASE: "hango"
+      MYSQL_ROOT_PASSWORD: password
+      MYSQL_DATABASE: hango
     command: mysqld --character-set-server=utf8mb4 --collation-server=utf8mb4_unicode_ci
     healthcheck:
       test: ["CMD", "mysqladmin" ,"ping", "-h", "localhost"]
