--- a/server/package.json
+++ b/server/package.json
@@ -1,12 +1,12 @@
 {
   "name": "hango",
-  "version": "1.3.1",
+  "version": "1.3.2",
   "main": "server.js",
   "license": "Apache 2.0",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js",
-    "dev": "./node_modules/.bin/nodemon src/app.js",
+    "dev": "./node_modules/.bin/nodemon server/server.js",
     "lint": "eslint src --fix",
     "pretty": "prettier \"src/**/*.js\""
   },
