--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,16 +9,19 @@ services:
     image: mysql:5.7
     container_name: hango-mysql
     volumes:
+      - ./db/config/utf-8.cnf:/etc/mysql/conf.d/custom.cnf
       - hango_sample_db_dev:/var/lib/mysql/
-      - ./db:/docker-entrypoint-initdb.d/
+      - ./db/sql:/docker-entrypoint-initdb.d/
     ports:
-      - "3306"
+      - 3306:3306
     environment:
       MYSQL_ROOT_PASSWORD: password
       MYSQL_DATABASE: hango
-    command: mysqld --character-set-server=utf8mb4 --collation-server=utf8mb4_unicode_ci
+    command: 
+      - --character-set-server=utf8mb4 
+      - --collation-server=utf8mb4_unicode_ci
     healthcheck:
-      test: ["CMD", "mysqladmin" ,"ping", "-h", "localhost"]
+      test: [CMD, mysqladmin ,ping, -h, localhost]
       timeout: 20s
       retries: 10
 
@@ -29,7 +32,7 @@ services:
       dockerfile: ./compose/hango/Dockerfile-dev
     command: /start-dev.sh
     ports:
-      - "9700:9700"
+      - 9700:9700
     volumes:
       - ./server/src:/app/src
       - ./server/package.json:/app/package.json
